# django-snacks

./: .gitignore  README.md  pyproject.toml
django_snacks/snacks_project/snacks_project/: settings.py
